--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start-prod" : "pm2 start server.js --name angular-news-api --log /home/ubuntu/logs/angular-news-api",
+    "start-prod": "pm2 start server.js --name angular-news-api --log /home/ubuntu/logs/angular-news-api",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/RisKiki/angular-news-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
